--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rollup-plugin-jsx-remove-attributes",
-    "version": "1.0.2",
+    "version": "2.0.2",
     "description": "rollup &amp; vite plugin to remove jsx attributes",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
@@ -19,24 +19,17 @@
         "LICENSE.txt"
     ],
     "type": "module",
-    "contributes": {
-        "typescriptServerPlugins": [
-            {
-                "name": "typescript-eslint-language-service"
-            }
-        ]
-    },
     "scripts": {
         "prebuild": "npm run lint",
         "build": "tsc",
         "prepublishOnly": "npm run build",
-        "lint": "eslint .eslintrc.cjs  src/**/*.ts",
-        "lint:fix": "npm run lint -- --fix"
+        "lint": "biome check --apply src"
     },
     "keywords": [
         "vite-plugin",
-        "rollup-plogin",
-        "remove data-testid"
+        "rollup-plugin",
+        "data-testid",
+        "remove attribute"
     ],
     "author": "jacob bogers <jkfbogers@gmail.com>",
     "license": "SEE LICENSE IN LICENSE.txt",
@@ -44,21 +37,18 @@
         "node": ">=v18.15.0"
     },
     "devDependencies": {
-        "@babel/core": "7.21.3",
-        "@babel/eslint-parser": "7.21.3",
-        "@babel/eslint-plugin": "7.19.1",
+        "@biomejs/biome": "1.7.3",
         "@types/acorn": "6.0.0",
         "@types/escodegen": "0.0.7",
         "@types/node": "18.15.3",
+        "@types/rollup": "0.54.0",
         "@typescript-eslint/eslint-plugin": "5.55.0",
-        "eslint": "8.36.0",
-        "typescript": "5.0.2",
-        "typescript-eslint-language-service": "5.0.0"
+        "typescript": "5.0.2"
     },
     "peerDependencies": {
-        "@rollup/pluginutils": "5.0 - 6",
-        "escodegen": "",
-        "vite": "4.0 - 5",
-        "estree-walker": "3.x - 4"
+        "@rollup/pluginutils": "5.1 - 5.2",
+        "escodegen": "2.1 - 2.2",
+        "estree-walker": "3.x - 4",
+        "vite": "4.0 - 4.5"
     }
 }
