--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
         "allowUmdGlobalAccess": false,
         "baseUrl": "./src",
         "module": "ESNext",
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "resolveJsonModule": true,
         "types": ["node"],
         "declaration": true,
