--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rollup-plugin-jsx-remove-attributes",
-    "version": "2.0.3",
+    "version": "2.1.0",
     "description": "rollup &amp; vite plugin to remove jsx attributes",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
@@ -34,20 +34,21 @@
     "author": "jacob bogers <jkfbogers@gmail.com>",
     "license": "SEE LICENSE IN LICENSE.txt",
     "engines": {
-        "node": ">=v18.15.0"
+        "node": ">=v20.8.0"
     },
     "devDependencies": {
         "@biomejs/biome": "1.7.3",
         "@types/acorn": "6.0.0",
         "@types/escodegen": "0.0.7",
-        "@types/node": "18.15.3",
+        "@types/node": "22.10.2",
         "@types/rollup": "0.54.0",
-        "typescript": "5.0.2"
+        "rollup": "4.29.1",
+        "typescript": "5.7.2"
     },
     "peerDependencies": {
         "@rollup/pluginutils": "5.1 - 5.2",
         "escodegen": "2.1 - 2.2",
         "estree-walker": "3.x - 4",
-        "vite": "5.2 - 6"
+        "vite": "6 - 7"
     }
 }
