--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/jacobbogers/rollup-plugin-jsx-remove-attributes.git"
+        "url": "git+https://github.com/jacobbogers/rollup-plugin-jsx-remove-attributes.git"
     },
     "sideEffects": false,
     "files": [
