--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "devDependencies": {
         "@biomejs/biome": "1.7.3",
         "@types/acorn": "6.0.0",
-        "@types/escodegen": "0.0.7",
         "@types/node": "22.10.2",
         "@types/rollup": "0.54.0",
         "rollup": "4.29.1",
@@ -47,7 +46,7 @@
     },
     "peerDependencies": {
         "@rollup/pluginutils": ">=5.1",
-        "escodegen": ">=2.1",
+        "astring": ">=1.9.0",
         "estree-walker": ">=3.0",
         "vite": ">=5.2"
     }
