--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rollup-plugin-jsx-remove-attributes",
-    "version": "2.1.1",
+    "version": "3.0.0",
     "description": "rollup &amp; vite plugin to remove jsx attributes",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
@@ -23,7 +23,8 @@
         "prebuild": "npm run lint",
         "build": "tsc",
         "prepublishOnly": "npm run build",
-        "lint": "biome check --apply src"
+        "lint": "biome check --apply src",
+        "test": "vitest run --coverage ./test/success.spec.ts ./test/errors.spec.ts"
     },
     "keywords": [
         "vite-plugin",
@@ -42,7 +43,9 @@
         "@types/node": "22.10.2",
         "@types/rollup": "0.54.0",
         "rollup": "4.29.1",
-        "typescript": "5.7.2"
+        "typescript": "5.8.3",
+        "vitest": "3.1.4",
+        "@vitest/coverage-v8": "3.1.4"
     },
     "peerDependencies": {
         "@rollup/pluginutils": ">=5.1",
