--- a/package.json
+++ b/package.json
@@ -42,15 +42,18 @@
         "@types/acorn": "6.0.0",
         "@types/node": "22.10.2",
         "@types/rollup": "0.54.0",
+        "@vitest/coverage-v8": "3.1.4",
         "rollup": "4.29.1",
         "typescript": "5.8.3",
-        "vitest": "3.1.4",
-        "@vitest/coverage-v8": "3.1.4"
+        "vitest": "3.1.4"
     },
     "peerDependencies": {
         "@rollup/pluginutils": ">=5.1",
         "astring": ">=1.9.0",
         "estree-walker": ">=3.0",
         "vite": ">=5.2"
+    },
+    "dependencies": {
+        "source-map": "0.7.4"
     }
 }
